# Robo-Trader-Agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
config/: settings.py
scripts/: backtest.py  run_autopilot.py  run_cycle.py  run_equity_trader.py  run_scalper.py  run_swing.py  start.sh
src/: orchestrator.py
src/api/: dashboard.py  dashboard_html.py  platform_html.py
src/backtest/: backtester.py
src/llm/: analyst.py  scalp_analyst.py
src/risk/: manager.py
src/strategies/: engine.py  indicators.py  scalp_signals.py  signals.py
src/trading/: alpaca_client.py  autopilot.py  crypto_stream.py  equity_trader.py  scalper.py  swing_trader.py
